crates/check_cli/tests/snapshots/main_cases_editorconfig/indent_size_can_set_to_tab.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
snapshot_kind: text
---
## `.editorconfig`

```editorconfig

        [*]
        indent_size = tab
        
```

## `test.js`

```js
function setName(name) {
	currentName = name;
}

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
