crates/check_cli/tests/snapshots/main_cases_editorconfig/root_parse_error.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `.editorconfig`

```editorconfig

root = on

```

# Termination Message

```block
.editorconfig:2:8 configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Invalid boolean value: `true` or `false` is expected.
  
  > 2 │ root = on
      │        ^^
    3 │ 
  


```
