crates/check_cli/tests/snapshots/main_cases_editorconfig/should_not_use_editorconfig.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
snapshot_kind: text
---
## `.editorconfig`

```editorconfig

[*]
indent_style = space
indent_size = 2

```

## `test.js`

```js
function setName(name) {
	currentName = name;
}

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
